style: fix linting error in forum cards css

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -286,7 +286,7 @@ body {
     /* Truncate text */
     display: -webkit-box;
     -webkit-line-clamp: 2;
-    line-clamp: 2;
+    line-clamp: 2; /* Standard property */
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
